Add HTML export feature for BibMaps
- Add htmlExport service with generateHtmlExport function
- Add export button to BibMap canvas for HTML download
- Include legend rendering in HTML exports
- Add comprehensive tests for HTML export functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,6 +88,9 @@
             <button id="copy-link" class="tool-btn" aria-label="Copy shareable link" title="Copy Link" disabled>
               <span aria-hidden="true">&#128279;</span>
             </button>
+            <button id="export-html" class="tool-btn" aria-label="Export as HTML" title="Export HTML">
+              <span aria-hidden="true">&#128230;</span>
+            </button>
             <button id="close-bibmap" class="tool-btn tool-btn-danger" aria-label="Close this BibMap" title="Close BibMap">
               <span aria-hidden="true">&times;</span>
             </button>
